--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "primereact",
+    "name": "@quarkunlimit/primereact",
     "private": false,
-    "version": "10.0.10-SNAPSHOT",
+    "version": "10.0.10",
     "scripts": {
         "dev": "next dev",
         "start": "next start",
