--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@quarkunlimit/primereact",
     "private": false,
-    "version": "10.1.0",
+    "version": "10.2.0-SNAPSHOT",
     "scripts": {
         "dev": "next dev",
         "start": "next start",
