--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
         "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.3/xlsx-0.19.3.tgz"
     },
     "devDependencies": {
+        "postcss-preset-env": "^9.3.0",
+        "postcss": "^8.4.31",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-transform-runtime": "^7.22.10",
         "@babel/preset-env": "^7.22.14",
